Esqueleto Traductor/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

	import ast.*;
	import ast.definitions.*;
	import ast.expressions.Expression;
	import ast.expressions.access.*;
	import ast.expressions.constant.*;
	import ast.expressions.*;
	import ast.definitions.*;
	import ast.sentences.*;
	import ast.types.*;
	import ast.types.primitives.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT_CONSTANT=40, REAL_CONSTANT=41, CHAR_CONSTANT=42, IDENT=43, 
		LINE_COMMENT=44, MULTILINE_COMMENT=45, WHITESPACE=46;
	public static final int
		RULE_start = 0, RULE_definitions = 1, RULE_definition = 2, RULE_definitionVariables = 3, 
		RULE_definitionVariable = 4, RULE_structFields = 5, RULE_structField = 6, 
		RULE_definitionFunctionParams = 7, RULE_definitionFunctionParam = 8, RULE_type = 9, 
		RULE_sentences = 10, RULE_sentence = 11, RULE_callFunctionParams = 12, 
		RULE_expression = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definitions", "definition", "definitionVariables", "definitionVariable", 
			"structFields", "structField", "definitionFunctionParams", "definitionFunctionParam", 
			"type", "sentences", "sentence", "callFunctionParams", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "';'", "'('", "')'", "':'", "'var'", 
			"','", "'int'", "'float'", "'char'", "'['", "']'", "'='", "'return'", 
			"'print'", "'printsp'", "'println'", "'read'", "'while'", "'if'", "'else'", 
			"'.'", "'<'", "'>'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<='", "'>='", 
			"'=='", "'!='", "'&&'", "'^'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", 
			"IDENT", "LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((StartContext)_localctx).definitions = definitions();
			setState(29);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).definitions.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DefinitionContext definition;
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << IDENT))) != 0)) {
				{
				{
				setState(32);
				((DefinitionsContext)_localctx).definition = definition();
				 _localctx.list.add(((DefinitionsContext)_localctx).definition.ast); 
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public Definition ast;
		public DefinitionVariableContext definitionVariable;
		public Token IDENT;
		public StructFieldsContext structFields;
		public DefinitionFunctionParamsContext definitionFunctionParams;
		public DefinitionVariablesContext definitionVariables;
		public SentencesContext sentences;
		public TypeContext type;
		public DefinitionVariableContext definitionVariable() {
			return getRuleContext(DefinitionVariableContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public StructFieldsContext structFields() {
			return getRuleContext(StructFieldsContext.class,0);
		}
		public DefinitionFunctionParamsContext definitionFunctionParams() {
			return getRuleContext(DefinitionFunctionParamsContext.class,0);
		}
		public DefinitionVariablesContext definitionVariables() {
			return getRuleContext(DefinitionVariablesContext.class,0);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				((DefinitionContext)_localctx).definitionVariable = definitionVariable();
				 ((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).definitionVariable.ast; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(T__0);
				setState(44);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(45);
				match(T__1);
				setState(46);
				((DefinitionContext)_localctx).structFields = structFields();
				setState(47);
				match(T__2);
				setState(48);
				match(T__3);
				 ((DefinitionContext)_localctx).ast =  new DefinitionStruct(((DefinitionContext)_localctx).IDENT, ((DefinitionContext)_localctx).structFields.list); 
						
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(52);
				match(T__4);
				setState(53);
				((DefinitionContext)_localctx).definitionFunctionParams = definitionFunctionParams();
				setState(54);
				match(T__5);
				setState(55);
				match(T__1);
				setState(56);
				((DefinitionContext)_localctx).definitionVariables = definitionVariables();
				setState(57);
				((DefinitionContext)_localctx).sentences = sentences();
				setState(58);
				match(T__2);
				 ((DefinitionContext)_localctx).ast =  new DefinitionFunction(((DefinitionContext)_localctx).IDENT, ((DefinitionContext)_localctx).definitionFunctionParams.list, TypeVoid.getInstance(), ((DefinitionContext)_localctx).definitionVariables.list, ((DefinitionContext)_localctx).sentences.list); 
						
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(62);
				match(T__4);
				setState(63);
				((DefinitionContext)_localctx).definitionFunctionParams = definitionFunctionParams();
				setState(64);
				match(T__5);
				setState(65);
				match(T__6);
				setState(66);
				((DefinitionContext)_localctx).type = type();
				setState(67);
				match(T__1);
				setState(68);
				((DefinitionContext)_localctx).definitionVariables = definitionVariables();
				setState(69);
				((DefinitionContext)_localctx).sentences = sentences();
				setState(70);
				match(T__2);
				 ((DefinitionContext)_localctx).ast =  new DefinitionFunction(((DefinitionContext)_localctx).IDENT, ((DefinitionContext)_localctx).definitionFunctionParams.list, ((DefinitionContext)_localctx).type.ast, ((DefinitionContext)_localctx).definitionVariables.list, ((DefinitionContext)_localctx).sentences.list); 
						
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionVariablesContext extends ParserRuleContext {
		public List<DefinitionVariable> list = new ArrayList<DefinitionVariable>();
		public DefinitionVariableContext definitionVariable;
		public List<DefinitionVariableContext> definitionVariable() {
			return getRuleContexts(DefinitionVariableContext.class);
		}
		public DefinitionVariableContext definitionVariable(int i) {
			return getRuleContext(DefinitionVariableContext.class,i);
		}
		public DefinitionVariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionVariables; }
	}

	public final DefinitionVariablesContext definitionVariables() throws RecognitionException {
		DefinitionVariablesContext _localctx = new DefinitionVariablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definitionVariables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(75);
				((DefinitionVariablesContext)_localctx).definitionVariable = definitionVariable();
				 _localctx.list.add(((DefinitionVariablesContext)_localctx).definitionVariable.ast); 
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionVariableContext extends ParserRuleContext {
		public DefinitionVariable ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefinitionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionVariable; }
	}

	public final DefinitionVariableContext definitionVariable() throws RecognitionException {
		DefinitionVariableContext _localctx = new DefinitionVariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definitionVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__7);
			setState(84);
			((DefinitionVariableContext)_localctx).IDENT = match(IDENT);
			setState(85);
			match(T__6);
			setState(86);
			((DefinitionVariableContext)_localctx).type = type();
			setState(87);
			match(T__3);
			 ((DefinitionVariableContext)_localctx).ast =  new DefinitionVariable(((DefinitionVariableContext)_localctx).IDENT, ((DefinitionVariableContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructFieldsContext extends ParserRuleContext {
		public List<StructField> list = new ArrayList<StructField>();
		public StructFieldContext structField;
		public List<StructFieldContext> structField() {
			return getRuleContexts(StructFieldContext.class);
		}
		public StructFieldContext structField(int i) {
			return getRuleContext(StructFieldContext.class,i);
		}
		public StructFieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structFields; }
	}

	public final StructFieldsContext structFields() throws RecognitionException {
		StructFieldsContext _localctx = new StructFieldsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_structFields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(90);
				((StructFieldsContext)_localctx).structField = structField();
				 _localctx.list.add(((StructFieldsContext)_localctx).structField.ast); 
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructFieldContext extends ParserRuleContext {
		public StructField ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StructFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structField; }
	}

	public final StructFieldContext structField() throws RecognitionException {
		StructFieldContext _localctx = new StructFieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_structField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((StructFieldContext)_localctx).IDENT = match(IDENT);
			setState(99);
			match(T__6);
			setState(100);
			((StructFieldContext)_localctx).type = type();
			setState(101);
			match(T__3);
			 ((StructFieldContext)_localctx).ast =  new StructField(((StructFieldContext)_localctx).IDENT, ((StructFieldContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionFunctionParamsContext extends ParserRuleContext {
		public List<DefinitionVariable> list = new ArrayList<DefinitionVariable>();
		public DefinitionFunctionParamContext definitionFunctionParam;
		public List<DefinitionFunctionParamContext> definitionFunctionParam() {
			return getRuleContexts(DefinitionFunctionParamContext.class);
		}
		public DefinitionFunctionParamContext definitionFunctionParam(int i) {
			return getRuleContext(DefinitionFunctionParamContext.class,i);
		}
		public DefinitionFunctionParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionFunctionParams; }
	}

	public final DefinitionFunctionParamsContext definitionFunctionParams() throws RecognitionException {
		DefinitionFunctionParamsContext _localctx = new DefinitionFunctionParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definitionFunctionParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(104);
				((DefinitionFunctionParamsContext)_localctx).definitionFunctionParam = definitionFunctionParam();
				 _localctx.list.add(((DefinitionFunctionParamsContext)_localctx).definitionFunctionParam.ast); 
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(106);
					match(T__8);
					setState(107);
					((DefinitionFunctionParamsContext)_localctx).definitionFunctionParam = definitionFunctionParam();
					 _localctx.list.add(((DefinitionFunctionParamsContext)_localctx).definitionFunctionParam.ast); 
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionFunctionParamContext extends ParserRuleContext {
		public DefinitionVariable ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefinitionFunctionParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionFunctionParam; }
	}

	public final DefinitionFunctionParamContext definitionFunctionParam() throws RecognitionException {
		DefinitionFunctionParamContext _localctx = new DefinitionFunctionParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_definitionFunctionParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((DefinitionFunctionParamContext)_localctx).IDENT = match(IDENT);
			setState(118);
			match(T__6);
			setState(119);
			((DefinitionFunctionParamContext)_localctx).type = type();
			 ((DefinitionFunctionParamContext)_localctx).ast =  new DefinitionVariable(((DefinitionFunctionParamContext)_localctx).IDENT, ((DefinitionFunctionParamContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public Token INT_CONSTANT;
		public TypeContext type;
		public Token IDENT;
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(T__9);
				 ((TypeContext)_localctx).ast =  TypeInt.getInstance(); 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(T__10);
				 ((TypeContext)_localctx).ast =   TypeFloat.getInstance(); 
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				match(T__11);
				 ((TypeContext)_localctx).ast =   TypeChar.getInstance(); 
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				match(T__12);
				setState(129);
				((TypeContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(130);
				match(T__13);
				setState(131);
				((TypeContext)_localctx).type = type();
				 ((TypeContext)_localctx).ast =  new TypeArray(new ExpressionConstantInt(((TypeContext)_localctx).INT_CONSTANT), ((TypeContext)_localctx).type.ast); 
						
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				((TypeContext)_localctx).IDENT = match(IDENT);
				 ((TypeContext)_localctx).ast =  new TypeStruct(((TypeContext)_localctx).IDENT); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentencesContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenceContext sentence;
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sentences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__38) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(138);
				((SentencesContext)_localctx).sentence = sentence();
				 _localctx.list.add(((SentencesContext)_localctx).sentence.ast); 
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Sentence ast;
		public ExpressionContext left;
		public ExpressionContext right;
		public ExpressionContext expression;
		public Token s;
		public SentencesContext sentences;
		public SentencesContext ifSentences;
		public SentencesContext elseSentences;
		public Token IDENT;
		public CallFunctionParamsContext callFunctionParams;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<SentencesContext> sentences() {
			return getRuleContexts(SentencesContext.class);
		}
		public SentencesContext sentences(int i) {
			return getRuleContext(SentencesContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public CallFunctionParamsContext callFunctionParams() {
			return getRuleContext(CallFunctionParamsContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	}
